--- a/plugins/entando-plugin-jpwebform/src/main/java/org/entando/entando/plugins/jpwebform/aps/internalservlet/form/userform.xml
+++ b/plugins/entando-plugin-jpwebform/src/main/java/org/entando/entando/plugins/jpwebform/aps/internalservlet/form/userform.xml
@@ -14,26 +14,32 @@
     	<action name="new" class="jpwebformUserFormAction" method="createNew">
             <!-- <result name="voidTypeCode" type="chain">listTypes</result> -->
             <result name="notRepeatable" type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/error-notRepeatable.jsp</result>
-            <result type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result>
-        	<interceptor-ref name="entandoFrontEndFreeStack"></interceptor-ref>
+            <!-- <result type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result> -->
+			<result type="guiFragment">${guiFragmentCode}</result>
+			<interceptor-ref name="entandoFrontEndFreeStack"></interceptor-ref>
         </action>
 
     	<action name="resume" class="jpwebformUserFormAction" method="resume">
             <!-- <result name="voidTypeCode" type="chain">listTypes</result> -->
-            <result type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result>
+            <!-- <result type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result> -->
+			<result type="guiFragment">${guiFragmentCode}</result>
         	<interceptor-ref name="entandoFrontEndFreeStack"></interceptor-ref>
         </action>
 
         <action name="submitStep" class="jpwebformUserFormAction" method="submitStep">
-            <result name="input" type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result>
-            <result type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result>
+            <!-- <result name="input" type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result> -->
+			<result name="input" type="guiFragment">${guiFragmentCode}</result>
+            <!-- <result type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result> -->
+			<result type="guiFragment">${guiFragmentCode}</result>
             <interceptor-ref name="entandoFrontToken" ><param name="typeMessages">message</param></interceptor-ref>
             <interceptor-ref name="entandoFrontEndFreeValidationStack"></interceptor-ref>
         </action>
         
         <action name="previousStep" class="jpwebformUserFormAction" method="previousStep">
-            <result name="input" type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result>
-            <result type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${previousStepCode}.jsp</result>
+            <!-- <result name="input" type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result> -->
+			<result name="input" type="guiFragment">${guiFragmentCode}</result>
+            <!-- <result type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${previousStepCode}.jsp</result> -->
+			<result type="guiFragment">${guiFragmentCode}</result>
             <interceptor-ref name="entandoFrontToken" ><param name="typeMessages">message</param></interceptor-ref>
             <interceptor-ref name="entandoFrontEndFreeStack"></interceptor-ref>
         </action>
@@ -46,13 +52,10 @@
 		-->
         <action name="entryForm" class="jpwebformUserFormAction" method="entryForm">
             <result name="expiredMessage" type="chain">new</result>
-            <result type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result>
+            <!-- <result type="dispatcher">/WEB-INF/plugins/jpwebform/aps/jsp/internalservlet/form/${currentTypeCode}/${versionType}/entryStep_${currentStepCode}.jsp</result> -->
+			<result type="guiFragment">${guiFragmentCode}</result>
         	<interceptor-ref name="entandoFrontEndFreeStack"></interceptor-ref>
         </action>
-
-		
-
-
 		
 		<!-- ######## INIT OPERATIONS FOR FILE ATTRIBUTES ######## -->
 
@@ -63,9 +66,7 @@
             </result>
         	<interceptor-ref name="entandoFrontEndFreeStack"></interceptor-ref>
         </action>
-
-
-        
+		
         <action name="removeFileResource*" class="jpwebformWebformFileAttributeAction" method="removeFile">
             <result type="chain">
         		<param name="actionName">resume</param>
@@ -73,8 +74,7 @@
         	<interceptor-ref name="entandoFrontEndFreeStack"></interceptor-ref>
         </action>
         <!-- ######## END OPERATIONS FOR FILE ATTRIBUTES ######## -->
-
-
+		
 		<!-- ######## INIT OPERATIONS FOR LIST ATTRIBUTES ######## -->
 
         <action name="addListElement*" class="jpwebformUserFormListAttributeAction" method="addListElement">
@@ -98,7 +98,6 @@
 
 	<package name="jpwebform_do/jpwebform/Form/Resource" namespace="/do/jpwebform/Form/Resource" extends="entando-front-default">
     	
-		
 		<action name="viewFileResource" class="jpwebformWebformFileAttributeAction" method="viewFile">
 			<result name="nullFile" type="chain">list</result>
 			<result name="success" type="stream">
@@ -134,7 +133,5 @@
         </action>
     	
     </package>
-
 	
-
 </struts>
